<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Oreoluwa</string>
    <string name="last_name">Adebusoye</string>
    <string name="full_name">Oreoluwa Adebusoye</string>

    <string name="profile_bio_text">Hi there! 👋🏾\nI am a professional overthinking procrastinator based in Baltimore 🧠📍\nFluent in TikTok lingo 💅🏾, and 80% fueled by vibes ✨ and matcha 🍵\nNice to meet you lol 😄</string>

    <string name="profile_hobby_header_text">Things That Bring Me Joy:</string>
    <string name="profile_hobby_first_text">📚 Reading thought-provoking books</string>
    <string name="profile_hobby_second_text">💻 Building creative coding projects</string>
    <string name="profile_hobby_third_text">🌍 Exploring cultures and good food</string>
</resources>